--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
-@import "https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css";
-@import "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css";
+@import "/lib/bootstrap-5.1.3-dist/css/bootstrap.min.css";
+@import "/lib/bootstrap-icons-1.8.3/bootstrap-icons.css";
+@import "/lib/fontawesome-free-6.1.1-web/css/all.min.css";
 
 html {
   font-size: 14px;
